--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     background-color: #524dd0;
-    height: 100vh;
+    height: 1000vh;
     font-family: 'Rajdhani', sans-serif;
     font-size: 40px;
     margin: 0;
@@ -19,6 +19,9 @@ a{
     width: 100%;
     overflow: auto;
     background-color: #2b2969;
+    
+
+    
 }
 
 form{
@@ -59,7 +62,7 @@ form button {
 }
 
 .popup.active {
-    top: 50%;
+    top: 550px;
     opacity: 1;
     transform: translate(-50%, -50%) scale(1.25);
     transition: top 0ms ease-in-out 0ms,
@@ -94,11 +97,30 @@ img{
 }
 
 .inleiding{
-    color: white;
-    margin: 5%;
+
+        
+        background-image: 
+        linear-gradient(0deg,rgba(82, 77, 208, 0.5),
+        rgba(68, 0, 255, 0.5)),
+          url('assets/auto1.jpg');
+          color: white;
+          
+
+
+}
+h1, h2, p{
+    margin: 1em;
+}
+.contactknop{
+    margin-left: 40%;
 }
 
+header{
+    position: sticky;
+    top: 0px;
+    background-color: #524dd0;
 
+}
 
 
 
